--- a/Learn_jQuery_UI_Widgets_Start/about.html
+++ b/Learn_jQuery_UI_Widgets_Start/about.html
@@ -6,6 +6,18 @@
 		<meta name="keywords" content="HTML,CSS,jQuery UI" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
 		<link rel="stylesheet" href="styles/style.css" />
+
+		<link rel="stylesheet" href="styles/jquery-ui.css" />
+		<script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ=" crossorigin="anonymous"></script>
+		<script src="scripts/jquery-ui.js"></script>
+
+		<script>
+		  $( function() {
+		    $( "#tabs" ).tabs();
+		  } );
+	  </script>
+
+
 	</head>
 	<body>
 		<div class="headerWrapper">
@@ -33,52 +45,68 @@
 		<div class="contentWrapper">
 			<div class="content">
 				 <h1>All about this course</h1>
-				 <h3>Course Description</h3>
-				 <div>
-				 JQuery UI is one of the most successful UI libraries available today.  JQuery UI is built with the JQuery Framework, by JQuery, and is without a doubt the most popular javascript library in use today.  JQuery UI features multi-browser support which means peace of mind that someone using firefox, safari, or chrome isn't going to leave your website with a sad face.
+
+				 <div id="tabs">
+					 <ul>
+						<li><a href="#tabs-description">Course Description</a></li>
+						<li><a href="#tabs-author">Course Author</a></li>
+						<li><a href="#tabs-section">Course section</a></li>
+						<li><a href="#tabs-content">Download the content</a></li>
+				   </ul>
+
+					 <div id="tabs-description">
+							<div>
+								JQuery UI is one of the most successful UI libraries available today.  JQuery UI is built with the JQuery Framework, by JQuery, and is without a doubt the most popular javascript library in use today.  JQuery UI features multi-browser support which means peace of mind that someone using firefox, safari, or chrome isn't going to leave your website with a sad face.
+							</div>
+							<div>
+								Don't know javascript?  That's okay.  You can use jquery UI plugins with little or no experience with javascript.
+							</div>
+							<div>
+								Don't know jquery?  That's okay too.  As long as you know HTML and CSS, jquery UI provides simple snippets that can be easily integrated into your code.
+							</div>
+					 </div>
+					 <div id="tabs-author">
+							<div>
+								You are learning to use jQuery UI Widgets with Marie Taylor.
+							</div>
+							<div>
+								This is her picture:
+							</div>
+							<div>
+								<img src="images/marie.jpg" alt="marie"/>
+							</div>
+					 </div>
+					 <div id="tabs-section">
+							<div>
+								There is only one, highlander!
+							</div>
+							<div>
+								But we are learning in this order:
+								<ul>
+									<li>Lecture 1:  Installing jQuery UI</li>
+									<li>Lecture 2:  Implementing the Widgets</li>
+									<li>Lecture 3:  Accordion</li>
+									<li>Lecture 4:  Tabs</li>
+									<li>Lecture 5:  Menu</li>
+									<li>Lecture 6:  Tooltip</li>
+									<li>Lecture 7:  Datepicker</li>
+									<li>Lecture 8:  jQuery UI Button and Other Theme Elements</li>
+								</ul>
+							</div>
+					 </div>
+					 <div id="tabs-content">
+							<div>
+								Hey! Make sure and get a copy of the content I demo in the lectures!  There is one copy of the website I demo here that doesn't have jquery ui installed yet.  That one is available to download with lecture 1.  There is also a completed one available for download with the final lecture.  Do what you want with it - just be nice!!
+							</div>
+					 </div>
+
 				 </div>
-				 <div>
-				 Don't know javascript?  That's okay.  You can use jquery UI plugins with little or no experience with javascript.
-				</div>
-				<div>
-				Don't know jquery?  That's okay too.  As long as you know HTML and CSS, jquery UI provides simple snippets that can be easily integrated into your code.
-				 </div>
-				 <h3>Course Author</h3>
-				 <div>
-					You are learning to use jQuery UI Widgets with Marie Taylor.
-				 </div>
-				 <div>
-					This is her picture:
-				</div>
-				<div>
-					<img src="images/marie.jpg" alt="marie"/>
-				 </div>
-				 <h3>Course section</h3>
-				 <div>
-					There is only one, highlander!
-				 </div>
-				 <div>
-					But we are learning in this order:
-					<ul>
-						<li>Lecture 1:  Installing jQuery UI</li>
-						<li>Lecture 2:  Implementing the Widgets</li>
-						<li>Lecture 3:  Accordion</li>
-						<li>Lecture 4:  Tabs</li>
-						<li>Lecture 5:  Menu</li>
-						<li>Lecture 6:  Tooltip</li>
-						<li>Lecture 7:  Datepicker</li>
-						<li>Lecture 8:  jQuery UI Button and Other Theme Elements</li>
-					</ul>
-				 </div>			
-				  <h3>Download the content</h3>
-				 <div>
-					Hey! Make sure and get a copy of the content I demo in the lectures!  There is one copy of the website I demo here that doesn't have jquery ui installed yet.  That one is available to download with lecture 1.  There is also a completed one available for download with the final lecture.  Do what you want with it - just be nice!!  
-				 </div>
+
 			</div>
 		</div>
 		<div class="footerWrapper">
 			<div class="footer">
-			&copy; 2013 Marie Taylor 
+			&copy; 2013 Marie Taylor
 			</div>
 		</div>
 	</body>
