--- a/Learn_jQuery_UI_Widgets_Start/favorites.html
+++ b/Learn_jQuery_UI_Widgets_Start/favorites.html
@@ -6,6 +6,16 @@
 		<meta name="keywords" content="HTML,CSS,jQuery UI" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
 		<link rel="stylesheet" href="styles/style.css" />
+
+		<link rel="stylesheet" href="styles/jquery-ui.css" />
+		<script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ=" crossorigin="anonymous"></script>
+		<script src="scripts/jquery-ui.js"></script>
+
+		<script>
+			$( function() {
+				$( "#menu" ).menu();
+			} );
+	  </script>
 	</head>
 	<body>
 		<div class="headerWrapper">
@@ -33,42 +43,42 @@
 		<div class="contentWrapper">
 			<div class="content">
 			 <h1>Favorites</h1>
-			<ul>
-				<li><h3>Foods</h3>
+			<ul id="menu">
+				<li><div>Foods</div>
 					<ul>
-						<li><a href="http://en.wikipedia.org/wiki/Ice_cream">Ice Cream</a></li>
-						<li><a href="http://en.wikipedia.org/wiki/Chocolate">Chocolate</a></li>
-						<li><a href="http://en.wikipedia.org/wiki/Asparagus">Asparagus</a></li>
+						<li><div><a href="http://en.wikipedia.org/wiki/Ice_cream">Ice Cream</a></div></li>
+						<li><div><a href="http://en.wikipedia.org/wiki/Chocolate">Chocolate</a></div></li>
+						<li><div><a href="http://en.wikipedia.org/wiki/Asparagus">Asparagus</a></div></li>
 					</ul>
 				</li>
-				<li><h3>Internet Things</h3>
+				<li><div>Internet Things</div>
 					<ul>
-						<li><a href="https://duckduckgo.com/">DuckDuckGo</a></li>
-						<li><a href="http://www.reddit.com/">Reddit</a></li>
-						<li><a href="http://www.wikipedia.org/">Wikipedia</a></li>
-						<li><a href="http://www.hyperboleandahalf.blogspot.com/">hyperbole and a half</a></li>
+						<li><div><a href="https://duckduckgo.com/">DuckDuckGo</a></div></li>
+						<li><div><a href="http://www.reddit.com/">Reddit</a></div></li>
+						<li><div><a href="http://www.wikipedia.org/">Wikipedia</a></div></li>
+						<li><div><a href="http://www.hyperboleandahalf.blogspot.com/">hyperbole and a half</a></div></li>
 					</ul>
 				</li>
-				<li><h3>This Site</h3>
+				<li><div>This Site</div>
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="favorites.html">Favorites</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><div><a href="index.html">Home</a></div></li>
+						<li><div><a href="about.html">About</a></div></li>
+						<li><div><a href="favorites.html">Favorites</a></div></li>
+						<li><div><a href="contact.html">Contact</a></div></li>
 					</ul>
 				</li>
-				<li><h3>Not my FAQs</h3>
+				<li><div>Not my FAQs</div>
 					<ul>
-						<li><a href="http://www.reddit.com/wiki/faq">Reddit FAQ</a></li>
-						<li><a href="http://www.faqs.org/faqs/">About FAQs that aren't mine</a></li>
-						<li><a href="http://www.mspaintadventures.com/?faqs=science">This is weird</a></li>
+						<li><div><a href="http://www.reddit.com/wiki/faq">Reddit FAQ</a></div></li>
+						<li><div><a href="http://www.faqs.org/faqs/">About FAQs that aren't mine</a></div></li>
+						<li><div><a href="http://www.mspaintadventures.com/?faqs=science">This is weird</a></div></li>
 					</ul>
-				</li>	
+				</li>
 			</ul>
 		</div>
 		<div class="footerWrapper">
 			<div class="footer">
-			&copy; 2013 Marie Taylor 
+			&copy; 2013 Marie Taylor
 			</div>
 		</div>
 	</body>
