--- a/Learn_jQuery_UI_Widgets_Start/index.html
+++ b/Learn_jQuery_UI_Widgets_Start/index.html
@@ -6,6 +6,16 @@
 		<meta name="keywords" content="HTML,CSS,jQuery UI" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
 		<link rel="stylesheet" href="styles/style.css" />
+
+		<link rel="stylesheet" href="styles/jquery-ui.css" />
+		<script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ=" crossorigin="anonymous"></script>
+		<script src="scripts/jquery-ui.js"></script>
+		<script>
+		  $( function() {
+		    $( "#myFancyDiv" ).accordion();
+		  } );
+	  </script>
+
 	</head>
 	<body>
 		<div class="headerWrapper">
@@ -33,32 +43,34 @@
 		<div class="contentWrapper">
 			<div class="content">
 			 <h1>So many ideas...</h1>
-				 <h3>Why don't elephants use umbrellas?</h3>
-				 <div>
-					The answer is simple, really.  Elephants couldn't hold an umbrella.  I'm sure they wouldn't mind though, if you attached an umbrella to their head.  Not only would it be a spectacle it would help them stay quite cool.  It may
-					cause some to laugh to much.  If they were to laugh too much, they may cause the elephant to spook.  Elephant stampede!
-				 </div>
-				 <h3>Cats should like pajamas.</h3>
-				 <div>
-					Unfortunately, cats don't like pajamas.  They feel humiliated by being dressed up in clothing.  But pajamas are quite wonderful.  If only they would realize how wonderful it is to be cozy and warm in pajamas.  Sure, they have fur and all, but that's not the best thing about pajamas.  One night you could wear robot pajamas, and the next skull pajamas.  I'd like to see a cat try and make robots in their fur.  
-				 </div>
-				 <h3>Is their a portal in my closet?</h3>
-				 <div>
-					I ask myself this question every night when I go to bed.  Some would say, no, there is no portal in your closet.  Maybe there isn't right now.  But let's not rule out the possibility.  I could be sleeping one night and BAM! a portal shows up in my closet.  Imagine the things that could come through that portal.  Aliens, monsters, or even lost socks might appear!
-				 </div>
-				 <h3>If only ghosts had teeth.</h3>
-				 <div>
-					I often think about the sad way that ghosts live their lives.  Being transparant and misty like prevents them from enjoying the sensation of eating that we living folks take for granted.  Perhaps one day scientists will invent a way for ghosts to have teeth.
-				 </div>
-				 <h3>If only peanuts had eyes.</h3>
-				 <div>
-					If peanuts had eyes they could live such better lives.  Right now, millions of peanuts are sitting around blind an unable to experience vision.  If peanuts had eyes they could live such wonderful lives.  Also, they could watch their last moments on earth as they are eaten by humans and elephants.  Elephants with umbrellas.
-				 </div>
+				<div id="myFancyDiv">
+					 <h3>Why don't elephants use umbrellas?</h3>
+					 <div>
+						The answer is simple, really.  Elephants couldn't hold an umbrella.  I'm sure they wouldn't mind though, if you attached an umbrella to their head.  Not only would it be a spectacle it would help them stay quite cool.  It may
+						cause some to laugh to much.  If they were to laugh too much, they may cause the elephant to spook.  Elephant stampede!
+					 </div>
+					 <h3>Cats should like pajamas.</h3>
+					 <div>
+						Unfortunately, cats don't like pajamas.  They feel humiliated by being dressed up in clothing.  But pajamas are quite wonderful.  If only they would realize how wonderful it is to be cozy and warm in pajamas.  Sure, they have fur and all, but that's not the best thing about pajamas.  One night you could wear robot pajamas, and the next skull pajamas.  I'd like to see a cat try and make robots in their fur.
+					 </div>
+					 <h3>Is their a portal in my closet?</h3>
+					 <div>
+						I ask myself this question every night when I go to bed.  Some would say, no, there is no portal in your closet.  Maybe there isn't right now.  But let's not rule out the possibility.  I could be sleeping one night and BAM! a portal shows up in my closet.  Imagine the things that could come through that portal.  Aliens, monsters, or even lost socks might appear!
+					 </div>
+					 <h3>If only ghosts had teeth.</h3>
+					 <div>
+						I often think about the sad way that ghosts live their lives.  Being transparant and misty like prevents them from enjoying the sensation of eating that we living folks take for granted.  Perhaps one day scientists will invent a way for ghosts to have teeth.
+					 </div>
+					 <h3>If only peanuts had eyes.</h3>
+					 <div>
+						If peanuts had eyes they could live such better lives.  Right now, millions of peanuts are sitting around blind an unable to experience vision.  If peanuts had eyes they could live such wonderful lives.  Also, they could watch their last moments on earth as they are eaten by humans and elephants.  Elephants with umbrellas.
+					 </div>
+		 		</div>
 			</div>
 		</div>
 		<div class="footerWrapper">
 			<div class="footer">
-			&copy; 2013 Marie Taylor 
+			&copy; 2013 Marie Taylor
 			</div>
 		</div>
 	</body>
